<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    android:padding="10dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/PurposeText"
            android:text="@string/Purpose"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/step1_Text"
            android:text="@string/Survey_Overview"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/PurposeText"
            android:layout_marginTop="30dp"
            android:textSize="15sp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/step2_Text"
            android:text="@string/Pretest_Overview"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/step1_Text"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/step3_Text"
            android:text="@string/Posttest_Overview"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/step2_Text"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ConsentText"
            android:text="@string/Consent"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/step3_Text"
            android:layout_marginTop="30dp"
            android:textSize="15sp"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/white"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Consent_Button"
            android:layout_below="@+id/ConsentText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="Consent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Disclaimer"
            android:layout_alignParentBottom="true"
            android:text="(This app is for non-commercial educational purposes only)"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/Consent_Button"
            android:paddingBottom="5dp" />

    </RelativeLayout>
</ScrollView>